prototype-fix: Fixed the font-size and alignment of Printing wizard name and file name-->2nd

--- a/src/astroprint/static/css/gen/app.css
+++ b/src/astroprint/static/css/gen/app.css
@@ -83,7 +83,7 @@ body button {
 }
 
 .wizard-name--printing {
-	width: 100%;
+	width: 64%;
 }
 
 .cancel-button,
